[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
evdev = "0.13.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
libc = "0.2.170"
memmap = "0.7.0"
rs_common = { version = "0.1.0", path = "../rs_common" }
