[package]
name = "rs_common"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
itertools = "0.14.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
